--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,9 @@ code {
   background-position: center;
   background-size: cover;
 }
+
+.bbb {
+  background: url('./assets/sticks.png');
+  background-repeat: no-repeat;
+  background-position: right;
+}
