SM-58 added more styling

--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@ code {
   background-size: cover;
 }
 
-.bbb {
+.circle {
   background: url('./assets/sticks.png');
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: bottom right;
 }
