--- a/src/index.css
+++ b/src/index.css
@@ -36,4 +36,7 @@ code {
     /* @apply mb-12 h-16 w-96 border-b border-black bg-[#ededed] p-4; */
     @apply mb-6 h-16 w-full border-b border-black bg-[#ededed] p-4 focus:border-transparent focus:outline focus:outline-2 focus:outline-black sm:w-96;
   }
+  .form-errors {
+    @apply absolute top-16 text-xs text-red-600;
+  }
 }
