--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   letter-spacing: 0.05em;
+  transition: all 1s ease-in-out;
 }
 
 code {
@@ -28,4 +29,32 @@ code {
   background: url('./assets/sticks.png');
   background-repeat: no-repeat;
   background-position: bottom right;
+}
+
+.slick-prev {
+  left: 2px;
+}
+.slick-next {
+  right: 2px;
+}
+
+.slick-prev,
+.slick-next {
+  width: 3rem;
+  height: 100%;
+  z-index: 30;
+  opacity: 0.3;
+}
+.slick-prev::before,
+.slick-next::before {
+  font-size: 3rem;
+  color: black;
+}
+
+.slick-slide img {
+  border-radius: 20px;
+}
+
+.slick-dots li button::before {
+  font-size: 20px;
 }
