--- a/src/index.css
+++ b/src/index.css
@@ -14,25 +14,57 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.hero-service {
+  /* max-width: 80rem;
+  height: 31.8rem; */
+  background: url('./assets/serviceHero.png');
+  /* background-size: cover; */
+}
+
+.hero-about {
+  /* max-width: 80rem;
+  height: 31.8rem; */
+  background: url('./assets/aboutHero.png');
+  /* background-size: cover; */
+  background-position-x: -180px;
+}
 
 .hero {
-  max-width: 80rem;
-  height: 31.8rem;
   background: url('./assets/hero2.png');
+}
+.about-sticks {
+  background: url('./assets/aboutSticks.png');
+  background-position-x: -180px;
+}
+
+.about-left {
+  background: url('./assets/aboutLeft.png');
   background-size: cover;
 }
 
+.about-right {
+  background: url('./assets/aboutRight.png');
+  background-size: cover;
+}
+@media screen and (min-width: 576px) {
+  .hero-about,
+  .about-sticks {
+    background-position-x: 0;
+  }
+}
+
+.hero,
+.hero-service,
+.hero-about,
+.about-sticks {
+  max-width: 80rem;
+  height: 31.8rem;
+  background-size: cover;
+}
 .circle {
   background: url('./assets/sticks.png');
   background-repeat: no-repeat;
   background-position: bottom right;
-}
-
-.hero-service {
-  max-width: 80rem;
-  height: 31.8rem;
-  background: url('./assets/serviceHero.png');
-  background-size: cover;
 }
 
 @layer components {
