--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,8 @@ code {
   width: 3rem;
   height: 100%;
   z-index: 30;
-  opacity: 0.3;
+  opacity: 0.7;
+  filter: invert(20%);
 }
 .slick-prev::before,
 .slick-next::before {
