--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,6 @@ code {
   background: url('./assets/aboutRight.png');
   background-size: cover;
 }
-@media screen and (min-width: 576px) {
-  .hero-about,
-  .about-sticks {
-    background-position-x: 0;
-  }
-}
 
 .hero,
 .hero-service,
@@ -61,6 +55,17 @@ code {
   background-position: bottom right;
 }
 
+@media screen and (min-width: 576px) {
+  .hero-about,
+  .about-sticks {
+    background-position-x: 0;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .user-table {
+    display: block;
+  }
+}
 @layer components {
   .btn-primary {
     @apply h-16 w-full rounded bg-[#232323] font-bold uppercase text-white hover:bg-slate-800 sm:w-96;
@@ -70,16 +75,5 @@ code {
   }
   .form-errors {
     @apply absolute top-16 text-xs text-red-600;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  table,
-  thead,
-  tbody,
-  th,
-  td,
-  tr {
-    display: block;
   }
 }
