SM-82 Styles for rosponsiv=bility and cleaned unneccesary code

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,11 @@ code {
     background-position-x: 0;
   }
 }
+@media only screen and (max-width: 768px) {
+  .user-table {
+    display: block;
+  }
+}
 
 .hero,
 .hero-service,
